--- a/index.html
+++ b/index.html
@@ -1,71 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Curriculo Digital</title>
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="icon" type="image/x-icon" href="/assets/curriculum-vitae-icon.png">
-    </head>
-    <body>
-        <div class="parent">
-            <header class="navbar"> 
-                <nav>
-                    <figure>
-                        <img src="/assets/avatar.jpeg" alt="avatar" id="avatar1">
-                    </figure>                                     
-                    <div id="nav-items" style="margin: 0px; color: white;">
-                        <div>
-                            <b><p class="active"><a href="/index.html">Sobre</a></p>
-                        </div>
-                        <div>
-                            <p class="button"><a href="/conhecimentos.html">Conhecimentos</a></p>
-                        </div>
-                        <div>
-                            <p class="button"><a href="/objetivos.html">Objetivos</a></p></b>
-                        </div>
-                    </div>
-                </nav>
-            </header>
-            <div class="content" style="margin: 0px;">
-                <main id="content">
-                    <div class="index-content">
-                        <h1 id="profile-name">Felipe <span id="profile-name-2">Bryan Campos de Moraes</span></h1>
-                        <p>
-                            <address>
-                                <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span id="city"><b>São José dos Campos-SP</b></span><br>
-                            </address>                        
-                            <b>Telefone:</b> (12) 99737-9355
-                            <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
-                                <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
-                            </a>                
-                        </p><hr>
-                        <p>
-                            Tenho ênfase na qualidade, precisão, organização e competência. Cooperativo, 
-                            sincero e leal.
-                            Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
-                        </p><br>
-                    </div>                    
-                    <figure>
-                        <a href="mailto:felipe.bryan@live.com" target="_blank" title="Enviar email para: felipe.bryan@live.com">
-                            <img src="/assets/outlook-icon.png" alt="outlook-icon" class="social-icon">
-                        </a>
-                        <a href="mailto:fbryancm@gmail.com" target="_blank" title="Enviar email para: fbryancm@gmail.com">
-                            <img src="/assets/gmail-icon.png" alt="gmail-icon" class="social-icon">
-                        </a>
-                        <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank" title="Perfil de Felipe Bryan no LinkedIn">
-                            <img src="/assets/linkedin-icon.png" alt="linkedin-icon" class="social-icon">
-                        </a>
-                        <a href="https://github.com/Felipe-Bryan" target="_blank">
-                            <img src="/assets/github-icon.png" alt="github-icon" class="social-icon" title="Perfil de Felipe Bryan no GitHub">
-                        </a>
-                        <a href="https://www.facebook.com/felipe.bryan" target="_blank">
-                            <img src="/assets/facebook-icon.png" alt="facebook-icon" class="social-icon" title="Perfil de Felipe Bryan no Facebook">
-                        </a>                        
-                    </figure>                   
-                </main>
-            </div>
-        </div>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="/assets/curriculum-vitae-icon.png"
+      type="image/x-icon"
+    />
+    <title>Curriculo Digital</title>
+  </head>
+  <body>
+    <div class="parent">
+      <div class="navbar">
+        <figure>
+          <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
+        </figure>
+        <nav class="nav-menu">
+          <p class="active"><a href="/index.html">Sobre</a></p>
+          <p class="button">
+            <a href="/conhecimentos.html">Conhecimentos</a>
+          </p>
+          <p class="button"><a href="/objetivos.html">Objetivos</a></p>
+        </nav>
+      </div>
+      <div class="content">
+        <main>
+          <div class="index-content">
+              <h1 class="profile-name">Felipe <span class="emphasis">Bryan Campos de Moraes</span></h1>
+              <p>
+                  <address>
+                      <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span class="city"><b>São José dos Campos-SP</b></span><br>
+                  </address>                        
+                  <b>Telefone:</b> (12) 99737-9355
+                  <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
+                      <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
+                  </a>                
+              </p><hr>
+              <p>
+                  Tenho ênfase na qualidade, precisão, organização e competência. Cooperativo, 
+                  sincero e leal.
+                  Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
+              </p><br>
+          </div>                    
+          <figure>
+              <a href="mailto:felipe.bryan@live.com" target="_blank" title="Enviar email para: felipe.bryan@live.com">
+                  <img src="/assets/outlook-icon.png" alt="outlook-icon" class="social-icon">
+              </a>
+              <a href="mailto:fbryancm@gmail.com" target="_blank" title="Enviar email para: fbryancm@gmail.com">
+                  <img src="/assets/gmail-icon.png" alt="gmail-icon" class="social-icon">
+              </a>
+              <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank" title="Perfil de Felipe Bryan no LinkedIn">
+                  <img src="/assets/linkedin-icon.png" alt="linkedin-icon" class="social-icon">
+              </a>
+              <a href="https://github.com/Felipe-Bryan" target="_blank">
+                  <img src="/assets/github-icon.png" alt="github-icon" class="social-icon" title="Perfil de Felipe Bryan no GitHub">
+              </a>
+              <a href="https://www.facebook.com/felipe.bryan" target="_blank">
+                  <img src="/assets/facebook-icon.png" alt="facebook-icon" class="social-icon" title="Perfil de Felipe Bryan no Facebook">
+              </a>                        
+          </figure>                   
+        </main>
+      </div>
+    </div>
+  </body>
 </html>
