--- a/objetivos.html
+++ b/objetivos.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Curriculo Digital</title>
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="icon" type="image/x-icon" href="/assets/curriculum-vitae-icon.png">
-    </head>
-    <body>
-        <div class="parent">
-            <div class="navbar">
-                <nav>
-                    <figure>
-                        <img src="/assets/avatar.jpeg" alt="avatar" id="avatar1">
-                    </figure>
-                    <div id="nav-items" style="margin: 0px;">
-                        <div>
-                            <b><p class="button"><a href="/index.html">Sobre</a></p>
-                        </div>
-                        <div>
-                            <p class="button"><a href="/conhecimentos.html">Conhecimentos</a></p>
-                        </div>
-                        <div>
-                            <p class="active"><a href="/objetivos.html">Objetivos</a></p></b>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-            <div class="content" style="margin: 0px;">
-                <main class="objetivos">
-                    <h3>Objetivos</h3><hr>
-                    <ul>
-                        <li>
-                            Atuar na área da tecnologia e ampliar ainda mais os meus conhecimentos, 
-                            desenvolvimento profissional e de vida, sempre em harmonia com a qualidade 
-                            do meu trabalho e a preparação dos meus dias para obter o sucesso esperado no 
-                            ato da minha contratação.
-                        </li><br>
-                        <li>
-                            Poder proporcionar conforto e segurnça para minha família por meio do meu 
-                            trabalho, de forma honesta e digna
-                        </li>
-                    </ul>
-                </main>
-            </div>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="/assets/curriculum-vitae-icon.png"
+      type="image/x-icon"
+    />
+    <title>Curriculo Digital</title>
+  </head>
+  <body>
+    <div class="parent">
+      <div class="navbar">
+        <figure>
+          <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
+        </figure>
+        <nav class="nav-menu">
+          <p class="button"><a href="/index.html">Sobre</a></p>
+          <p class="button">
+            <a href="/conhecimentos.html">Conhecimentos</a>
+          </p>
+          <p class="active"><a href="/objetivos.html">Objetivos</a></p>
+        </nav>
+      </div>
+      <div class="content">
+        <h2>Objetivos</h2>
+        <ul class="objective-list">
+          <li>
+            Atuar na área da tecnologia e ampliar ainda mais os meus
+            conhecimentos, desenvolvimento profissional e de vida, sempre em
+            harmonia com a qualidade do meu trabalho e a preparação dos meus
+            dias para obter o sucesso esperado no ato da minha contratação.
+          </li>
+          <br />
+          <li>
+            Poder proporcionar conforto e segurnça para minha família por meio
+            do meu trabalho, de forma honesta e digna
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
